voting-app/virtualServiceResult.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-voting-app-result
spec:
  hosts:
  - "*"
  gateways:
  - gateway-voting-app
  http:
  - match:
    - uri:
        prefix: /result
    route:
    - destination:
        host: result.ns-voting-app-dev.svc.cluster.local
        port:
          number: 5001
