voting-app/virtualServiceVote.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-voting-app-vote
spec:
  hosts:
  - "*"
  gateways:
  - gateway-voting-app
  http:
  - match:
    - uri:
        prefix: /vote
    route:
    - destination:
        host: vote.ns-voting-app-dev.svc.cluster.local
        port:
          number: 5000
